# opengeoda

./: DataViewer.vcproj  FramesManager.cpp  GenUtils.cpp  GeoDa.md  GeoDaConst.cpp  GeoDaConst.h  NewTableViewer.h  OpenGeoDa.sln  Project.cpp  Project.h  ProjectHome.md  TemplateCanvas.h  TemplateLegend.cpp  TemplateLegend.h  mapview.cpp  source_file_list.txt
DataViewer/: DataViewer.h  DataViewerApp.cpp  DataViewerApp.h  DataViewerDeleteColDlg.cpp  MergeTableDlg.cpp
DialogTools/: 3DControlPan.cpp  ASC2SHPDlg.h  AddCentroidsDlg.cpp  AddIdVariable.cpp  Bnd2ShpDlg.h  ConditionViewDlg.cpp  ConditionViewDlg.h  CreateSpTmProjectDlg.h  CreatingWeightDlg.h  Dbf2GaussDlg.cpp  Dbf2GaussDlg.h  ExportCsvDlg.cpp  ExportCsvDlg.h  FieldNewCalcBinDlg.cpp  FieldNewCalcBinDlg.h  FieldNewCalcLagDlg.cpp  FieldNewCalcLagDlg.h  FieldNewCalcRateDlg.cpp  FieldNewCalcSheetDlg.cpp  FieldNewCalcSpecialDlg.cpp  FieldNewCalcSpecialDlg.h  FieldNewCalcUniDlg.h  HistIntervalDlg.cpp  MapQuantileDlg.cpp  MapQuantileDlg.h  MovieControlPan.cpp  MovieControlPan.h  OpenSpaceTimeDlg.cpp  OpenSpaceTimeDlg.h  PermutationCounterDlg.h  RandomizationDlg.cpp  RandomizationDlg.h  RangeSelectionDlg.cpp  RegressionDlg.cpp  RegressionDlg.h  RegressionReportDlg.cpp  RegressionReportDlg.h  RegressionTitleDlg.h  SHP2ASCDlg.h  SaveSelectionDlg.cpp  (+6 more)
Explore/: 3DPlotView.cpp  BoxNewPlotView.h  BoxPlotView.cpp  BoxPlotView.h  CartogramView.h  ConditionalView.cpp  ConditionalView.h  GStatCoordinator.h  HistView.cpp  HistView.h  HistogramView.h  LisaBoxView.cpp  LisaCoordinator.cpp  LisaCoordinator.h  LisaCoordinatorObserver.h  LisaMapNewView.cpp  LisaMapView.cpp  LisaMapView.h  LisaScatterPlotView.cpp  LisaScatterPlotView.h  MoranScatterPlotView.h  PCPView.cpp  ScatterNewPlotView.cpp  ThemeUtilities.h
Generic/: HighlightState.cpp  HighlightState.h  MyShape.cpp  MyShape.h  TestMapView.cpp  TestScrollWinView.cpp
OpenGeoDa.xcodeproj/: project.pbxproj
Regression/: DenseVector.cpp  Link.h  smile.h
ShapeOperations/: CsvFileUtils.cpp  CsvFileUtils.h  DbfFile.cpp  DbfFile.h  GalWeight.h  GeodaWeight.h  GwtWeight.cpp  Randik.h  ShapeFile.h  ShapeFileHdr.cpp  ShapeUtils.cpp  ShapeUtils.h  WeightsManager.h  shp.cpp  shp.h  shp2cnt.cpp  shp2cnt.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  configurations.xml
rc/: MyAppResources.cpp  data_viewer_dialogs.xrc  geoda-notes.txt  menus.xrc  release-notes.txt
tags/1.0/: GenGeomAlgs.h  GenUtils.cpp  GenUtils.h  OpenGeoDa.cpp  Project.h  TemplateCanvas.cpp  TemplateCanvas.h  TemplateFrame.h  mapview.cpp  mapview.h  resource.h  source_file_list.txt
tags/1.0.1/: FramesManager.h  FramesManagerObserver.h  NewTableViewer.cpp  NewTableViewer.h  OpenGeoDa.cpp  OpenGeoDa.h  OpenGeoDa.vcproj  README  TemplateCanvas.cpp  copyright_txt.txt
tags/1.2.0/: Doxyfile  GenUtils.h  GeneralWxUtils.cpp  GeneralWxUtils.h  GeoDaConst.cpp  GeoDaConst.h  NewTableViewer.cpp  OpenGeoDa.cpp  OpenGeoDa.h  Project.cpp  TemplateCanvas.cpp  TemplateCanvas.h  TemplateFrame.cpp  TemplateFrame.h  mapview.cpp  mapview.h
trunk/: GeoDaConst.h  OpenGeoDa.vcproj  TemplateFrame.cpp  TemplateFrame.h  TemplateLegend.cpp  TemplateLegend.h
trunk/DataViewer/: DataViewerAddColDlg.cpp  DataViewerAddColDlg.h  DataViewerEditFieldPropertiesDlg.cpp  DataViewerEditFieldPropertiesDlg.h  DbfGridTableBase.cpp  DbfGridTableBase.h
trunk/DialogTools/: ASC2SHPDlg.cpp  AddCentroidsDlg.h  AddIdVariable.h  ConditionViewDlg.cpp  ConditionViewDlg.h  CreateGridDlg.cpp  DBF2SHPDlg.cpp  FieldNewCalcBinDlg.cpp  FieldNewCalcLagDlg.cpp  FieldNewCalcRateDlg.cpp  FieldNewCalcRateDlg.h  FieldNewCalcSheetDlg.cpp  FieldNewCalcUniDlg.cpp  ImportCsvDlg.cpp  LisaWhat2OpenDlg.cpp  LisaWhat2OpenDlg.h  PCPDlg.cpp  (+17 more)
trunk/Makefiles/: configure.ac
wiki/: BuildingOpenGeoDaMac.wiki  OpenGeoDa.wiki
(+259 files in other folders)
